tests/core/error/expression-unary-1.rq
SELECT (!2 AS ?op) { }
